@@ -71,6 +71,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/VOC_OMIMObsolete.sql.rpt">Genotype Annotations to Obsolete OMIM Terms</A>
 <LI><A HREF="/data/reports/qcreports_db/output/VOC_MPDups.sql.rpt">Duplicate MP Annotations</A>
 <LI><A HREF="/data/loads/mgi/vocload/OMIM/OMIMtermcheck.current.rpt">OMIM term or ID changes</A>
+<LI><A HREF="/data/reports/qcreports_db/output/ALL_MPAnnot.rpt">Total MP Annotations per Gene</A>
 </OL>
 
 <A NAME="mapping"><B>Mapping (dbradt)</B></A>
