@@ -1,3 +1,9 @@
+TAG: qcreports_db-4-4-1-4
+DATE: 01/25/2011
+STAFF: lec
+CHANGES:
+1) TR10523/ALL_MPAnnot.py/Total MP Annotations per Gene
+
 TAG: qcreports_db-4-4-1-3
 DATE: 01/19/2011
 STAFF: lec
